...
        cupertino: (_, _) => CupertinoIconButtonData(
          // workaround for https://github.com/flutter/flutter/issues/32701
          padding: EdgeInsets.zero,
        ),
      );
      trailingAction = PlatformIconButton(
        key: const Key('button_bookFlight'),
        onPressed: () => _bookFlight(context, _appConfig, null),
        icon: Icon(
          CupertinoIcons.airplane,
          color: CupertinoColors.systemRed,
          semanticLabel: AppLocalizations.of(context)!.button_bookFlight,
        ),
...
    final textStyle = !isCupertino(context)
        ? const TextStyle(fontWeight: FontWeight.bold)
        : null;
    return {
      0: Text(
        AppLocalizations.of(context)!.bookFlight_view_schedule,
        key: const Key("button_bookFlight_view_schedule"),
        style: textStyle,
      ),
      1: Text(
        AppLocalizations.of(context)!.bookFlight_view_month,
        key: const Key("button_bookFlight_view_month"),
        style: textStyle,
      ),
      2: Text(
        AppLocalizations.of(context)!.bookFlight_view_week,
        key: const Key("button_bookFlight_view_week"),
        style: textStyle,
      ),
      3: Text(
        AppLocalizations.of(context)!.bookFlight_view_day,
        key: const Key("button_bookFlight_view_day"),
        style: textStyle,
      ),
    };
  }

  int get _currentCalendarSwitch =>
...
