...
        padding: EdgeInsets.zero,
        onPressed: () => Navigator.of(context).pop(),
        child: Text(AppLocalizations.of(context)!.bookFlightModal_button_close),
      );
      trailingActions = [
        PlatformTextButton(
          widgetKey: const Key('button_bookFlightModal_save'),
          onPressed: () => _onSave(context),
          cupertino: (_, _) => CupertinoTextButtonData(
            // workaround for https://github.com/flutter/flutter/issues/32701
            padding: EdgeInsets.zero,
          ),
          child: Text(
...
