...
        children: <Widget>[
          if (_appConfig.currentAircraft!.url != null)
            Row(
              children: [
                Expanded(
                  child: CupertinoButton(
                    key: const Key('about_button_update_aircraft'),
                    onPressed: () => _onRefresh(context),
                    child: Text(
                      AppLocalizations.of(context)!.about_app_update_aircraft,
                      style: const TextStyle(color: CupertinoColors.activeBlue),
                    ),
                  ),
...
              ],
            ),
          Row(
            children: [
              Expanded(
                child: CupertinoButton(
                  key: const Key('about_button_disconnect_aircraft'),
                  onPressed: () => _onLogout(context),
                  child: Text(
                    AppLocalizations.of(context)!.about_app_disconnect_aircraft,
                    style: const TextStyle(
                      color: CupertinoColors.destructiveRed,
                    ),
...
