...
        title: Text(AppLocalizations.of(context)!.addAircraft_title),
        trailingActions: isCupertino(context)
            ? <Widget>[
                Consumer2<AppConfig, DownloadProvider>(
                  builder: (context, appConfig, downloadProvider, child) =>
                      PlatformTextButton(
                        widgetKey: const Key('aircraft_data_button_install'),
                        onPressed: () =>
                            _downloadData(context, appConfig, downloadProvider),
                        cupertino: (_, _) => CupertinoTextButtonData(
                          // workaround for https://github.com/flutter/flutter/issues/32701
                          padding: EdgeInsets.zero,
                        ),
...
